trunk/Archive2/01/f14304763bac04/output
main.cpp: In function 'constexpr int f()':
main.cpp:5:41: error: call to non-constexpr function 'int printf(const char*, ...)'
         return printf("a side effect!\n");
                                         ^
main.cpp: In function 'int main()':
main.cpp:10:19: warning: ISO C++ forbids variable length array 'a' [-Wvla]
         char a[f()];
                   ^
